server completed